Fix for left position on small screen

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -140,6 +140,7 @@ body {
 	z-index: 5;
 	.handheld({
 		width: 90%;
+		left: -100%;
 	});
 	.aside-transition();
 	.highlighted {
